# routes/faq.js
@@ -16,8 +16,8 @@ router.get('/', authorize(['public access user', 'admin']), async (req, res) => 
   }
 });
 
-// Search FAQs (accessible by both users and admins)
-router.get('/search/:term', authorize(['public access user', 'admin']), async (req, res) => {
+// Search FAQs 
+router.get('/search/:term', async (req, res) => {
   const { term } = req.params;
   try {
     const pool = await connect();
@@ -32,7 +32,7 @@ router.get('/search/:term', authorize(['public access user', 'admin']), async (r
 });
 
 // Get a single FAQ by ID (accessible by both users and admins)
-router.get('/:faqId', authorize(['public access user', 'admin']), async (req, res) => {
+/*router.get('/:faqId', authorize(['public access user', 'admin']), async (req, res) => {
   const { faqId } = req.params;
   try {
     const pool = await connect();
@@ -48,9 +48,9 @@ router.get('/:faqId', authorize(['public access user', 'admin']), async (req, re
     res.status(500).send(err);
   }
 });
-
+*/
 // Create a new FAQ (admin only)
-router.post('/', authorize('admin'), async (req, res) => {
+router.post('/newfaq', authorize('admin'), async (req, res) => {
   const { question, answer } = req.body;
   try {
     const pool = await connect();
